syntax = "proto3";

package transcription;

service Transcribe {
    rpc Transcribe (TranscriptionRequest) returns (TranscriptionResponse);
}

message TranscriptionRequest {
    bytes audio = 1;
}

message TranscriptionResponse {
    string text = 1;
}